--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
   "author": "Abhishek Kumar",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.0",
     "nodemon": "^3.1.3",
     "prettier": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   }
 }
